modif à propos + ajout des compétences

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style/style.css" />
-		<link rel="stylesheet" media="all and (max-width: 768px)" href="style/petite_resolution.css" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/js/all.min.js" integrity="sha256-MAgcygDRahs+F/Nk5Vz387whB4kSK9NXlDN3w58LLq0=" crossorigin="anonymous"></script>
-        <title>Mon CV</title>        
+        <title>Curriculum vitæ - Antoine NAGY</title>        
     </head>
     <body>
 		<div class="container">
@@ -33,7 +32,7 @@
 				<!-- à propos de moi -->
 				<div id="about">
 					<h2>à propos de moi</h2>
-					<p>Connaissez-vous Louis-Antoine de Bougainville ? Non ? Le premier français à avoir fait le tour du monde ! J'ai passé plus de 8 ans à gérer le site web de notre association les Amis de Bougainville en tant que bénévole. Après avoir obtenu mon bac S spécialités mathématiques, j'ai voulu continuer mes études en prépa pour devenir ingénieur. Ensuite, je me suis réorienté vers ma première passion, en me reconvertissant grâce à une formation de développement web. Aujourd'hui, je souhaite étendre mon expérience et de me professionnaliser.</p>
+					<p>Connaissez-vous Louis-Antoine de Bougainville ? Non ? Le premier français à avoir fait le tour du monde ! J'ai passé plus de 8 ans à gérer le site web de notre association les Amis de Bougainville en tant que bénévole. Après avoir obtenu mon bac S spécialités mathématiques, j'ai voulu continuer mes études en prépa pour devenir ingénieur. Ensuite, je me suis réorienté vers ma première passion grâce à une formation de développement web. Aujourd'hui, je souhaite étendre mon expérience et de me professionnaliser.</p>
 				</div>
 
 				<!-- loisir -->
@@ -71,15 +70,15 @@
 							<dt class="puce_1">2020 à aujourd'hui<br />Paris</dt>
 							<dd>
 								<h3>Openclassrooms</h3>
-								<h4>Formation de développeur web</h4>
-								<p>Découper, assembler et intégrer tous les éléments d’une maquette graphique en HTML5 et CSS3 ; appliquer les standards du web et les normes en vigueur ; construire un site web fluide s’adaptant à tout type d’écran ; améliorer le référencement naturel en utilisant les balises selon leur sémantique ; faire réagir la page web en fonction des actions de l’utilisateur en JavaScript ; créer, gérer et afficher le contenu d’une base de données (SQL).</p>
+								<h4>Formation de développeur web - Diplôme RNCP</h4>
+								<p>Découper, assembler et intégrer tous les éléments d’une maquette graphique en HTML5 et CSS3 ; appliquer les standards du web et les normes en vigueur ; construire un site web fluide s’adaptant à tout type d’écran ; améliorer le référencement naturel ; faire réagir la page web en fonction des actions de l’utilisateur en JavaScript ; interagir avec un web service avec JavaScript ; créer, gérer et afficher le contenu d’une base de données (MySQL).</p>
 							</dd>
 						</div>
 						<div class="box">
 							<dt>2014-2017<br />Evreux</dt>
 							<dd>
 								<h3>Classe préparatoire aux grandes écoles (C.P.G.E.)</h3>
-								<h4>Physique Sciences de l'ingénieur (PSI)</h4>
+								<h4>Physique, chime et Sciences de l'ingénieur (PSI) - 120 crédits ECTS (mention très bien)</h4>
 								<p>Programmation en Python : liste, bibliothèques, itération et récursivité, algorithmes de tri, structure de pile. SQL : consulter une base de donnée.</p>
 							</dd>
 						</div>
@@ -101,18 +100,18 @@
 							</dd>
 						</div>
 						<div class="box">
+							<dt>2016 à aujourd'hui</dt>
+							<dd>
+								<h3>Micro-entrepreneur</h3>
+								<p>Développeur web CMS, de la conception du site au support technique en passant par la maintenance dont le projet my-little-candies.</p>
+							</dd>
+						</div>
+						<div class="box">
 							<dt>2017-2018</dt>
 							<dd>
 								<h3>Webmaster</h3>
 								<h4>Webmaster d'un site e-commerce</h4>
-								<p>Création et gestion d'un site d'une entreprise my-little-candies de vente de friandise en CMS (wifeo) : gestion d'un espace membre, boutique en ligne avec paiement.</p>
-							</dd>
-						</div>
-						<div class="box">
-							<dt>2016 à aujourd'hui</dt>
-							<dd>
-								<h3>Micro-entrepreneur</h3>
-								<p>Programmation informatique, numréo de siret : 81756546800011</p>
+								<p>Création et gestion d'un site de l'entreprise my-little-candies de vente de friandise en CMS (wifeo) : gestion d'un espace membre, boutique en ligne avec paiement.</p>
 							</dd>
 						</div>
 					</dl>
@@ -137,29 +136,30 @@
 					</div>
 					<div class="box">
 						<div class="progress"> 
-							<div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width:65%">
-								<h5>JAVASCRIPT 65%</h5>
+							<div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+								<h5>JAVASCRIPT 70%</h5>
 							</div>
 						</div>
 						<div class="progress"> 
-							<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
-								<h5>BOOTSTRAP 90%</h5>
+							<div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+								<h5>BOOTSTRAP 70%</h5>
 							</div>
 						</div>
 					</div>
 					<div class="box">
 						<div class="progress"> 
-							<div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width:75%">
-								<h5>MYSQL 75%</h5>
+							<div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width:65%">
+								<h5>MYSQL 65%</h5>
 							</div>
 						</div>
 						<div class="progress"> 
-							<div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
-								<h5>VUE.JS 80%</h5>
+							<div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+								<h5>VUE.JS 70%</h5>
 							</div>
 						</div>
 					</div>
-					<p><span style="font-weight: bold;">Autres : </span>Sass, SEO, API REST, Nuxt.js, OWASP, Node.js, Express, MongoDB, Visual Studio, Git, Python</p>
+					<p><span style="font-weight: bold;">Autres : </span>Sass, SEO, API REST, Nuxt.js, OWASP, Node.js, Express, MongoDB, Visual Studio, Git, Python, Agility, Responsive, Mobile-friendly, WCAG</p>
+					<p><span style="font-weight: bold;">Soft skills : </span>Curieux, autonome, autodidacte, polyvalent, rigoureux</p>
 				</div>
 			</section>
 		</div>
