--- a/index.html
+++ b/index.html
@@ -9,44 +9,6 @@
     </head>
     <body>
 		<div class="container">
-			<!-- colonne de gauche -->
-			<section id="left-column">
-				<!-- photo de profil -->
-				<div id="profil">
-					<img src="images/profil.jpg" alt="Photo de profil" title="C'est moi, Antoine !" />
-				</div>
-
-				<!-- contact -->
-				<div id="contact">
-					<h2>contact</h2>
-					<p><span style="font-weight: bold;">Adresse</span><br/>Appt. 33 - Rue Artus Fillon<br/>27130 VERNEUIL-SUR-AVRE</p>
-					<p><span style="font-weight: bold;">Téléphone</span><br/>07 69 07 67 07</p>
-					<p><span style="font-weight: bold;">Email</span><br/><a href="mailto:nagy.antoine@gmail.com">nagy.antoine@gmail.com</a></p>
-					<p><span style="font-weight: bold;">Twitter</span><br/><a href="https://twitter.com/NagyAntoine">@NagyAntoine</a></p>
-					<p><span style="font-weight: bold;">GitHub</span><br/><a href="https://github.com/enniota27">enniota27</a></p>
-					<p><span style="font-weight: bold;">Linkedin</span><br/><a href="https://www.linkedin.com/in/antoine-nagy/">Antoine NAGY</a></p>
-					<p><span style="font-weight: bold;">Portfolio</span><br/><a href="">http://enniota27.github.io/portfolio</a></p>
-					<p>Permis B - Voiture personnel<br/>25 ans</p>
-				</div>
-
-				<!-- à propos de moi -->
-				<div id="about">
-					<h2>à propos de moi</h2>
-					<p>Connaissez-vous Louis-Antoine de Bougainville ? Non ? Le premier français à avoir fait le tour du monde ! J'ai passé plus de 8 ans à gérer le site web de notre association les Amis de Bougainville en tant que bénévole. Après avoir obtenu mon bac S spécialités mathématiques, j'ai voulu continuer mes études en prépa pour devenir ingénieur. Ensuite, je me suis réorienté vers ma première passion grâce à une formation de développement web. Aujourd'hui, je souhaite étendre mon expérience et de me professionnaliser.</p>
-				</div>
-
-				<!-- loisir -->
-				<div id="hobbies">
-					<h2>loisirs</h2>
-					<div id="icone">
-						<img src="images/gamepad.png" alt="Jeux vidéos" title="Jeux vidéos" />
-						<img src="images/tree.png" alt="Généalogie" title="Généalogie" />
-						<img src="images/work-tools-cross.png" alt="Bricolage" title="Bricolage" />
-					</div>
-				</div>
-
-			</section>
-			
 			<!-- colonne de droite -->
 			<section id="right-column">
 
@@ -125,36 +87,36 @@
 					<div class="box">
 						<div class="progress"> 
 							<div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
-								<h5>HTML 85%</h5>
+								<h3 class="titre">HTML 85%</h3>
 							</div>
 						</div>
 						<div class="progress"> 
 							<div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
-								<h5>CSS 85%</h5>
+								<h3 class="titre">CSS 85%</h3>
 							</div>
 						</div>
 					</div>
 					<div class="box">
 						<div class="progress"> 
 							<div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-								<h5>JAVASCRIPT 70%</h5>
+								<h3 class="titre">JAVASCRIPT 70%</h3>
 							</div>
 						</div>
 						<div class="progress"> 
 							<div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-								<h5>BOOTSTRAP 70%</h5>
+								<h3 class="titre">BOOTSTRAP 70%</h3>
 							</div>
 						</div>
 					</div>
 					<div class="box">
 						<div class="progress"> 
 							<div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width:65%">
-								<h5>MYSQL 65%</h5>
+								<h3 class="titre">MYSQL 65%</h3>
 							</div>
 						</div>
 						<div class="progress"> 
 							<div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-								<h5>VUE.JS 70%</h5>
+								<h3 class="titre">VUE.JS 70%</h3>
 							</div>
 						</div>
 					</div>
@@ -162,11 +124,45 @@
 					<p><span style="font-weight: bold;">Soft skills : </span>Curieux, autonome, autodidacte, polyvalent, rigoureux</p>
 				</div>
 			</section>
+			<!-- colonne de gauche -->
+			<section id="left-column">
+				<!-- photo de profil -->
+				<div id="profil">
+					<img src="images/profil.jpg" alt="Photo de profil" title="C'est moi, Antoine !" />
+				</div>
+
+				<!-- contact -->
+				<div id="contact">
+					<h2>contact</h2>
+					<p><span style="font-weight: bold;">Adresse</span><br/>Appt. 33 - Rue Artus Fillon<br/>27130 VERNEUIL-SUR-AVRE</p>
+					<p><span style="font-weight: bold;">Téléphone</span><br/>07 69 07 67 07</p>
+					<p><span style="font-weight: bold;">Email</span><br/><a href="mailto:nagy.antoine@gmail.com">nagy.antoine@gmail.com</a></p>
+					<p><span style="font-weight: bold;">Twitter</span><br/><a href="https://twitter.com/NagyAntoine">@NagyAntoine</a></p>
+					<p><span style="font-weight: bold;">GitHub</span><br/><a href="https://github.com/enniota27">enniota27</a></p>
+					<p><span style="font-weight: bold;">Linkedin</span><br/><a href="https://www.linkedin.com/in/antoine-nagy/">Antoine NAGY</a></p>
+					<p><span style="font-weight: bold;">Portfolio</span><br/><a href="https://enniota27.github.io/portfolio/">https://enniota27.github.io/portfolio/</a></p>
+					<p>Permis B - Voiture personnel<br/>25 ans</p>
+				</div>
+
+				<!-- à propos de moi -->
+				<div id="about">
+					<h2>à propos de moi</h2>
+					<p>Connaissez-vous Louis-Antoine de Bougainville ? Non ? Le premier français à avoir fait le tour du monde ! J'ai passé plus de 8 ans à gérer le site web de notre association les Amis de Bougainville en tant que bénévole. Après avoir obtenu mon bac S spécialités mathématiques, j'ai voulu continuer mes études en prépa pour devenir ingénieur. Ensuite, je me suis réorienté vers ma première passion grâce à une formation de développement web. Aujourd'hui, je souhaite étendre mon expérience et me professionnaliser.</p>
+				</div>
+
+				<!-- loisir -->
+				<div id="hobbies">
+					<h2>loisirs</h2>
+					<div id="icone">
+						<img src="images/gamepad.png" alt="Jeux vidéos" title="Jeux vidéos" />
+						<img src="images/tree.png" alt="Généalogie" title="Généalogie" />
+						<img src="images/work-tools-cross.png" alt="Bricolage" title="Bricolage" />
+					</div>
+				</div>
+
+			</section>
+			
+			
 		</div>
-    
-    
     </body>
-
-
-
 </html>
