--- a/index.html
+++ b/index.html
@@ -5,7 +5,21 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style/style.css" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/js/all.min.js" integrity="sha256-MAgcygDRahs+F/Nk5Vz387whB4kSK9NXlDN3w58LLq0=" crossorigin="anonymous"></script>
-        <title>Curriculum vitæ - Antoine NAGY</title>        
+		<title>Curriculum vitæ - Antoine NAGY</title>   
+		<meta name="title" content="Mon CV - Antoine NAGY">
+		<meta name="description" content="Mon curriculum vitæ en ligne">
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://metatags.io/">
+		<meta property="og:title" content="Mon CV - Antoine NAGY">
+		<meta property="og:description" content="Mon curriculum vitæ en ligne">
+		<meta property="og:image" content="https://enniota27.github.io/mon-CV/images/cv.jpg">
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image">
+		<meta property="twitter:url" content="https://metatags.io/">
+		<meta property="twitter:title" content="Mon CV - Antoine NAGY">
+		<meta property="twitter:description" content="Mon curriculum vitæ en ligne">
+		<meta property="twitter:image" content="https://enniota27.github.io/mon-CV/images/cv.jpg">
     </head>
     <body>
 		<div class="container">
@@ -141,7 +155,7 @@
 					<p><span style="font-weight: bold;">GitHub</span><br/><a href="https://github.com/enniota27">enniota27</a></p>
 					<p><span style="font-weight: bold;">Linkedin</span><br/><a href="https://www.linkedin.com/in/antoine-nagy/">Antoine NAGY</a></p>
 					<p><span style="font-weight: bold;">Portfolio</span><br/><a href="https://enniota27.github.io/portfolio/">https://enniota27.github.io/portfolio/</a></p>
-					<p>Permis B - Voiture personnel<br/>25 ans</p>
+					<p>Permis B - Voiture personnelle<br/>25 ans</p>
 				</div>
 
 				<!-- à propos de moi -->
